Fix horixontal scroll on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -174,11 +174,6 @@ ul.tags li {
         font-size: 1.1rem;
     }
 
-    .fork-me {
-        top: -15px;
-        right: -15px;
-    }
-
     .main {
         margin: 0 auto;
     }
